# rtmc-client

./: README.md  make.py  pyproject.toml
src/aio_mgr/: emulation_server.py
src/rtmc_client/: device.py
tests/: conftest.py  test_device.py  test_emulation_server.py
