[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rtmc-client"
version = "0.1.0"
description = "Client-side library for managing RTMC Cards"
license = "BSD-2-Clause"
license-files = ["LICENSE.txt"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil>=7.0,<8.0",
]

[project.urls]
"Documentation" = "https://docs.thetamachines.com/"
"Source Code" = "https://github.com/theta-machines/rtmc-client"
"Bug Tracker" = "https://github.com/theta-machines/rtmc-client/issues"
