[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "aio-mgr"
version = "0.1.0"
description = "Client-side library for managing Theta Machines All-in-One Motion Controllers"
license = "BSD-2-Clause"
license-files = ["LICENSE.txt"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil>=7.0,<8.0",
]

[project.urls]
"Documentation" = "https://docs.thetamachines.com/"
"Source Code" = "https://github.com/theta-machines/aio-mgr"
"Bug Tracker" = "https://github.com/theta-machines/aio-mgr/issues"
